<resources>
    <string name="app_name">Calculator</string>
    <string name="change_sign" translatable="false">±</string>
    <string name="reset_value" translatable="false">C</string>
    <string name="percent" translatable="false">%</string>
    <string name="division" translatable="false">÷</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="multiplication" translatable="false">×</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="minus" translatable="false">-</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="plus" translatable="false">+</string>
    <string name="zero" translatable="false">0</string>
    <string name="decimal_separator" translatable="false">,</string>
    <string name="equal_sign" translatable="false">=</string>
    <string name="dark_theme">Dark theme</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
</resources>