<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/backgroundtexture" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/calculatorIndicator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/indicator_height"
            android:layout_gravity="bottom"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonsLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/indicator_font_size"
            android:textColor="@color/white"
            android:gravity="bottom|end"
            android:padding="@dimen/indicator_padding"
            />
        <TableLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="parent">

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_reset_value"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/reset_value"
                    style="@style/OrangeButtonStyle"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_change_sign"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/change_sign"
                    style="@style/DarkGreyButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_percent"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/percent"
                    style="@style/DarkGreyButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_division"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/division"
                    style="@style/DarkGreyButtonStyle" />
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_1"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/one"
                    style="@style/CommonButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_2"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/two"
                    style="@style/CommonButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_3"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/three"
                    style="@style/CommonButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_multiplication"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/multiplication"
                    style="@style/DarkGreyButtonStyle" />
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_4"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/four"
                    style="@style/CommonButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_5"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/five"
                    style="@style/CommonButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_6"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/six"
                    style="@style/CommonButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_minus"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/minus"
                    style="@style/DarkGreyButtonStyle" />
            </TableRow>

            <TableRow>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_7"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/seven"
                    style="@style/CommonButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_8"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/eight"
                    style="@style/CommonButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_9"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/nine"
                    style="@style/CommonButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_plus"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/plus"
                    style="@style/DarkGreyButtonStyle" />
            </TableRow>

            <TableRow
                android:weightSum="4">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_0"
                    android:layout_span="@integer/layout_span_2"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/zero"
                    style="@style/CommonButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_decimal_separator"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/decimal_separator"
                    style="@style/CommonButtonStyle" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_equal_sign"
                    android:layout_width="@dimen/button_layout_width"
                    android:layout_weight="@integer/weight_1"
                    android:text="@string/equal_sign"
                    style="@style/OrangeButtonStyle"/>
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>